fix: Adjust padding and overflow in IntroSection for better layout

--- a/src/components/sections/Intro:/IntroSection.module.scss
+++ b/src/components/sections/Intro:/IntroSection.module.scss
@@ -5,6 +5,8 @@
   flex-direction: column;
   align-items: center;
   min-height: 100vh;
+  overflow: hidden;
+  padding: 8rem 0;
 
   @media (max-width: vars.$breakpoint-md) {
     padding: 5.5rem 2rem;
